--- a/css/index.css
+++ b/css/index.css
@@ -3,11 +3,24 @@ body {
 	padding: 0;
 }
 
-#background {
+.left, .right {
 	position: fixed;
-	z-index: -1;
-	object-fit: cover;
-	opacity: 0.02;
+	background-color: yellow;
+	z-index: 3;
+}
+
+.left {
+	width: 10px;
+	left: 0;
+	top: 0;
+	bottom: 0;
+}
+
+.right {
+	width: 10px;
+	right: 0;
+	top: 0;
+	bottom: 0;
 }
 
 .whole {
@@ -17,12 +30,6 @@ body {
 	margin: 0;
 	padding: 0;
 	z-index: 1;
-}
-
-#lol {
-	height: 100px;
-	margin-top: 550px;
-	margin-left: 1100px;
 }
 
 
@@ -83,7 +90,7 @@ h2 {
 
 .content {
 	transition: 300ms ease;
-	padding-top: 150px; 
+	padding-top: 175px; 
 	display: grid;
  	grid-template-columns: 1fr 500px 500px 1fr;	
  	grid-gap: 10px;
@@ -91,6 +98,7 @@ h2 {
 
 .footer {
 	transition: 300ms ease;
+	padding-bottom: 15px;
 }
 
 .footer > p {
@@ -146,9 +154,9 @@ h2 {
 	top: 0;
 	right: 0;
 	bottom: 0;
-	left: -175px;
+	left: -200px;
 	padding-left: 25px;
-	width: 150px;
+	width: 175px;
 	background-color: #222222;
 	z-index: 2;
 	transition: 300ms ease;
@@ -159,27 +167,42 @@ h2 {
 }
 
 #toggler:checked + .whole .menu {
-	left: 0px;
+	left: 10px;
 }
 
 #toggler:checked + .whole .hook {
-	left: 200px;
+	left: 225px;
 }
 
-#toggler:checked + .whole .content {
-	padding-left: 175px;
+#toggler:checked + .whole #title {
+	margin-left: -40px;
+}
+
+#toggler:checked + .whole #kicker {
+	margin-left: -40px;
 }
 
 #toggler:checked + .whole .footer {
-	padding-left: 175px;
+	margin-left: 175px;
 }
 
-#toggler:checked + .whole .logo #title {
-	margin-left: -50px;
+#myname p{
+	opacity: 1;
+	font-family: futura, sans-serif;
+	text-transform: uppercase;
+	color: #eee;
+	letter-spacing: 0.3em;
+	margin-bottom: 3px;
 }
 
-#toggler:checked + .whole .logo #kicker {
-	margin-left: -50px;
+#myoc p{
+	opacity: 1;
+	font-family: futura, sans-serif;
+	font-size: 10px;
+	letter-spacing: 0.3em;
+	color: #eee;
+	text-transform: uppercase;
+	margin-bottom: 50px;
 }
 
 .menu ul {
@@ -214,4 +237,73 @@ h2 {
 
 .menu ul li a:link {
 	text-decoration: none;
+}
+
+@media screen and (max-width: 736px) {
+	.menu {
+	position: fixed;
+	top: -175px;
+	right: 0;
+	bottom: 0;
+	left: 0;
+	padding-left: 25px;
+	height: 140px;
+	width: 100%;
+	background-color: #222222;
+	z-index: 4;
+	transition: 300ms ease;
+}
+
+	#toggler:checked + .whole .menu {
+	top: 0px;
+}
+
+	#toggler:checked + .whole .hook {
+	top: 150px;
+	left: 20px;
+}
+
+	#toggler:checked + .whole #title {
+	margin-top: 225px;
+	margin-left: -125px;
+}
+
+	#toggler:checked + .whole #kicker {
+	margin-top: 300px;
+	margin-left: -125px;
+}
+
+	#toggler:checked + .whole .footer {
+	margin-top: 175px;
+	margin-left: 0;
+}
+
+	#myname p{
+	opacity: 1;
+	font-family: futura, sans-serif;
+	text-transform: uppercase;
+	color: #eee;
+	letter-spacing: 0.3em;
+	margin-bottom: 3px;
+}
+
+	#myoc p{
+	opacity: 1;
+	font-family: futura, sans-serif;
+	font-size: 10px;
+	letter-spacing: 0.3em;
+	color: #eee;
+	text-transform: uppercase;
+	margin-bottom: 25px;
+}
+
+	.menu ul {
+	margin-top: 0;
+}
+
+	.menu ul li {
+	display: inline;
+	list-style-type: none;
+	padding-right: 25px;
+}
 }
